# projet_editeur_de_lien_-L3Info-

./: README.md  header.c  readelf_section_list.c  tablesection.c  tablesection.h
elf_linker-1.0/: .test.sh.swp  Makefile  Makefile.am  Makefile.in  Makefile.old  clean_test.sh  entete.c  entete.h  entete_modularise.c  entete_modularise.h  etape6.c  etape7.c  fusionsymbole.c  fusionsymbole.h  header.c  header.h  lecture_octet.c  lecture_octet.h  progbits.c  progbits.h  readelf_S.c  readelf_contenu.c  readelf_h.c  readelf_h_mod.c  readelf_header.c  readelf_r.c  readelf_reimplant.c  readelf_relocation.c  readelf_s.c  readelf_section.c  readelf_section_content.c  readelf_section_list.c  readelf_sym.c  readelf_symbols_table.c  readsection.c  readsection.h  reloca.c  reloca.h  symboltable.c  symboltable.h  (+7 more)
elf_linker-1.0/Examples_loader/: exemples.sh  fichA.c  fichA.h  fichA.s  fichB.c  fichB.s  test.s
